k8s/generating-deployment.yaml
#cassandra
#helm install cassandra --set dbUser.password=pass,dbUser.user=cassandra,persistence.size=1Gi,replicaCount=3 bitnami/cassandra
#CREATE KEYSPACE airports with replication={'class':'NetworkTopologyStartegy', 'datacenter1':3}
#redis
#helm install redis --set replica.replicaCount=3,auth.enabled=false bitnami/redis

apiVersion: apps/v1
kind: Deployment
metadata:
  name: generating-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: generator
  template:
    metadata:
      labels:
        component: generator
    spec: 
      containers:
        - name: generating
          image: dominikoman16/task1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
