k8s/generating-cluster-ip-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: generating-cluster-ip-service
  labels:
    app: generating-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: generator
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
