k8s/handling-cluster-ip-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: handling-cluster-ip-service
  labels:
    app: handling-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: handler
  ports:
    - protocol: "TCP"
      port: 9090
      targetPort: 9090
