k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: handling-cluster-ip-service
                port:
                  number: 9090 
          - pathType: Prefix
            path: /source/?(.*)
            backend:
              service:
                name: generating-cluster-ip-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /prometheus/?(.*)
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
